Rename css class to index-anchor

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,10 +15,10 @@
   {{ $section_count := len $section }}
   {{ if ge $section_count 1 }}
   {{ $section_name := index (.Site.Params.mainSections) 0 }}
-  <section class="index-section">
+  <section>
   {{ range $section }}
     {{ $url := .Params.existingUrl | default .URL }}
-    <a href="{{ $url }}" class="index-summary">
+    <a href="{{ $url }}" class="index-anchor">
       {{ .Render "summary" }}
     </a>
   {{ end }}
