--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -1,5 +1,6 @@
 card-shadow = 0 0 4px 2px rgba(0, 0, 0, 0.2)
 not-small = "screen and (min-width: 30em)"
+medium = "screen and (min-width: 30em) and (max-width: 60em)"
 large = "screen and (min-width: 60em)"
 primary = #1976d2
 primary-light =  #63a4ff
@@ -35,7 +36,7 @@ common-text()
   margin-top: 2rem
 }
 
-.index-summary {
+.index-anchor {
   display: block
   background-color: #fff
   border-top: thin solid primary black-2
