Remove list style view from small devices and add padding on the sides in index

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
   {{ $section_count := len $section }}
   {{ if ge $section_count 1 }}
   {{ $section_name := index (.Site.Params.mainSections) 0 }}
-  <section>
+  <section class="index-section">
   {{ range $section }}
     {{ $url := .Params.existingUrl | default .URL }}
     <a href="{{ $url }}" class="index-anchor">
