Inline common-text css variable in body

--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -7,7 +7,7 @@
     </div>
   </div>
   <div>
-    <div class="tc pb4 ph3 ph4-ns">
+    <div class="avenir tc pb4 ph3 ph4-ns">
       <h1 class="f2 f-subheadline-l fw3 white-90 mb0 mt0 lh-title">
         {{ .Title | default .Site.Title }}
       </h1>
