Add page class to single

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -6,6 +6,7 @@
 {{ end }}
 
 {{ define "main" }}
+<div class="page">
   <article class="article">
     <time class="article__date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
       {{ .Date.Format "January 2, 2006" }}
@@ -27,6 +28,7 @@
   <div class="article-extra">
     {{ partial "disqus.html" . }}
   </div>
+</div>
 {{ end }}
 {{ define "footer-nav" }}
   <div></div>
