--- a/src/css/ananke.css
+++ b/src/css/ananke.css
@@ -117,7 +117,7 @@ pre {
 .instagram,
 .twitter,
 .youtube {
-  fill: #bababa;
+  fill: rgba( 255, 255, 255, .8 );
 }
 .facebook:hover {
   fill: #3b5998;
