--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -1,19 +1,25 @@
+black-8 = rgba(0, 0, 0, 0.8)
+black-6 = rgba(0, 0, 0, 0.6)
+black-2 = rgba(0, 0, 0, 0.2)
+
+near-white = #f4f4f4
+white-8 = rgba( 255, 255, 255, .8 )
+
 card-shadow = 0 0 4px 2px rgba(0, 0, 0, 0.2)
 not-small = "screen and (min-width: 30em)"
 medium = "screen and (min-width: 30em) and (max-width: 60em)"
 large = "screen and (min-width: 60em)"
+
 primary = #1976d2
+primary-dark = #004ba0
 primary-light =  #63a4ff
-black-8 = rgba(0, 0, 0, 0.8)
-black-6 = rgba(0, 0, 0, 0.6)
-black-2 = rgba(0, 0, 0, 0.2)
 
 link() 
   opacity: 0.5
   transition: opacity 0.15s ease-in
 
 .body-wrapper
-  background-color: #f4f4f4
+  background-color: near-white
   font-family: 'avenir next', avenir, sans-serif
   color: black-8
   line-height: 1.5
@@ -24,6 +30,29 @@ link()
   @media large
     font-size: 1.25rem
 
+.nav {
+  background-color: primary-dark
+  width: 100%
+  padding: 1rem
+  display: flex
+  justify-content: space-between
+  align-items: center
+  @media not-small {
+    padding: 1rem 2rem
+  }
+  &__title {
+    font-size: 1.5rem
+    font-weight: 300
+    font-family: "avenir next", avenir, sans-serif
+    text-decoration: none
+    color: white-8
+    display: inline-block
+    &:hover
+    &:focus { 
+      color: white
+    }
+  }
+}
 .page {
   margin 0 auto
   padding: 0 0.5rem
