Replace social-buttons.css

--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -178,6 +178,13 @@ body.fixed-nav-parent nav {
   &--center
     text-align: center
   
+.fb-share-button span {
+  vertical-align: initial !important
+}
+
+#github-repo-button iframe {
+  vertical-align: middle !important
+}
 .subscribe
   &__input
     border-style: solid
