Replace ananke.css

--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -53,6 +53,18 @@ link()
     }
   }
 }
+
+.github
+.twitter {
+  fill: white-8;
+}
+.twitter:hover {
+  fill: #1da1f2;
+}
+.github:hover {
+  fill: black;
+}
+
 .page {
   margin 0 auto
   padding: 0 0.5rem
@@ -217,3 +229,25 @@ body.fixed-nav-parent nav {
     display: inline
     margin-left: .25rem
 
+.pre
+pre {
+  overflow-x: auto
+  overflow-y: hidden
+  overflow: scroll
+}
+pre code {
+  display: block
+  padding: 1.5em
+  font-size: 0.875rem
+  line-height: 2
+}
+pre
+pre code {
+  white-space: pre
+}
+pre {
+  background-color: #222
+  color: #ddd
+  hyphens: none
+  position: relative
+}
