Remove overflow: scroll for pre

--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -232,8 +232,8 @@ body.fixed-nav-parent nav {
 pre {
   overflow-x: auto
   overflow-y: hidden
-  overflow: scroll
   position: relative
+  hyphens: none
 }
 pre code {
   display: block
