--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -122,16 +122,16 @@ body.fixed-nav-parent nav {
 }
 
 .article {
-  margin: 1rem auto
+  margin: 1rem auto 0
   padding: 1rem
   box-shadow: card-shadow
   background-color: #fff
   @media medium {
-    margin: 2rem auto
+    margin-top: 2rem
     padding: 1.5rem
   }
   @media large {
-    margin: 4rem auto
+    margin-top: 4rem
     padding: 2rem
   }
   &__date {
