Update title styling

--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -144,13 +144,22 @@ body.fixed-nav-parent nav {
     }
   }
   &__title {
-    font-family: "avenir next", avenir, sans-serif
+    font-family: athelas, georgia, serif    
     font-size: 1rem
     @media medium {
       font-size: 1.25rem
     }
     @media large {
       font-size: 1.5rem
+    }
+    &--large {
+      font-size: 1.25rem
+      @media medium {
+        font-size: 1.5rem
+      }
+      @media large {
+        font-size: 1.75rem
+      }
     }
   }
   &__content {
