Remove uncessary roles

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -46,7 +46,7 @@
   <body class="body-wrapper">
 
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
-    <main role="main">
+    <main>
       {{ block "main" . }}{{ end }}
     </main>
     <footer>
