--- a/layouts/partials/site-header.html
+++ b/layouts/partials/site-header.html
@@ -1,5 +1,5 @@
 <header class="cover bg-top" style="background-color: #004ba0;">
-  <div class="pv3 ph3 ph4-ns" role="navigation">
+  <div class="pv3 ph3 ph4-ns">
     <div class="flex justify-between items-center center">
       <div class="">
         {{ partial "social-follow.html" . }}
