--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,4 +1,4 @@
-<nav class="nav" role="navigation">
+<nav class="nav">
   <a href="{{ .Site.BaseURL }}" class="nav__title">
     {{ .Site.Title }}
   </a>
