Remove redundant html

--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -2,7 +2,7 @@
   <a href="{{ .Site.BaseURL }}" class="nav__title">
     {{ .Site.Title }}
   </a>
-  <div class="">
+  <div>
     {{ partial "social-follow.html" . }}
   </div>
 </nav>
