--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -295,6 +295,22 @@ body.fixed-nav-parent nav {
     display: inline
     margin-left: .25rem
 
+.site-license {
+  margin-top: 1rem
+  padding: 1rem;
+  text-align: right
+  font-size: 1rem;
+  font-weight: 200
+    & a {
+      text-decoration: none
+      color: currentColor
+    &:hover
+    &:focus {
+      link()
+    }
+  }
+}
+
 pre {
   overflow-x: auto
   overflow-y: hidden
