Add share button styles

--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -256,8 +256,16 @@ body.fixed-nav-parent nav {
   &--center
     text-align: center
   
-.fb-share-button span {
-  vertical-align: initial !important
+.fb-share-button {
+  & span {
+    vertical-align: initial !important
+  }
+}
+
+.fb-share-button
+.twitter-share-button {
+  display: inline
+  vertical-align: top
 }
 
 #github-repo-button iframe {
