--- a/layouts/partials/social-buttons.html
+++ b/layouts/partials/social-buttons.html
@@ -1,18 +1,16 @@
 <div id="fb-root"></div>
 <div>
   <!--https://developers.facebook.com/docs/plugins/share-button-->
-  <div class="fb-share-button di v-top"
+  <div class="fb-share-button"
        data-href="{{ .Permalink }}"
        data-size="large"
        data-layout="button_count">
   </div>
 
-  <div class="di v-top">
-    <!--https://dev.twitter.com/web/tweet-button-->
-    <a class="twitter-share-button"
-       href="https://twitter.com/intent/tweet?text={{ .Params.title }}&via=DeveloperDavo"
-       data-size="large">
-    </a>
-  </div>
+  <!--https://dev.twitter.com/web/tweet-button-->
+  <a class="twitter-share-button"
+      href="https://twitter.com/intent/tweet?text={{ .Params.title }}&via=DeveloperDavo"
+      data-size="large">
+  </a>
 </div>
 
