--- a/layouts/404.html
+++ b/layouts/404.html
@@ -2,7 +2,7 @@
   {{ partial "site-navigation.html" . }}
 {{ end }}
 {{ define "main" }}
-  <article class="f4-ns f5 pa5 tc">
+  <article class="not-found">
     The requested page was not found. Return to <a href='{{ "/" | absURL }}'>home</a>.
   </article>
 {{ end }}
