--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,37 +1,3 @@
-/* TODO: replace */
-@import "tachyons/css/tachyons.css"; 
+@import "normalize.css/normalize.css";
 @import "dist/pre-styles.css";
 @import "syntax.css";
-
-/* TODO: replace */
-@custom-media --not-small screen and (min-width: 30em);
-@custom-media --large screen and (min-width: 60em);
-
-/* TODO: replace */
-:root {
-  --primary: #1976d2;
-  --primary-dark: #004ba0;
-  --primary-light: #63a4ff;
-  --text-color: rgba(0, 0, 0, 0.84);
-  --card-shadow: {
-    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2); 
-  }
-}
-
-.nested-links a {
-  color: var(--text-color);
-}
-
-.nested-links a:focus,
-.nested-links a:hover {
-  color: currentcolor;
-  opacity: 0.5;
-}
-
-.bg-primary {
-  background-color: var(--primary);
-}
-
-.b--primary {
-  border-color: var(--primary);
-}
