--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -344,13 +344,17 @@ pre code {
 }
 
 .not-found {
-  text-align: center
-  margin-top: 2rem
-  & a {
-    color: currentColor
-    &:hover
-    &:focus {
-      link()
+  background: url('https://media.giphy.com/media/OfpdDt12u1Psk/giphy.gif') no-repeat fixed center
+  &__content {
+    text-align: center
+    margin-top: 2rem
+    & a {
+      color: currentColor
+      &:hover
+      &:focus {
+        link()
+      }
     }
   }
 }
+
