--- a/src/css/styl/pre-styles.styl
+++ b/src/css/styl/pre-styles.styl
@@ -353,4 +353,10 @@ pre code {
       link()
     }
   }
+  &__gif {
+    background-image: url('https://media.giphy.com/media/OfpdDt12u1Psk/giphy.gif')
+    background-repeat: no-repeat
+    background-position: top
+    height: 20rem
+  }
 }
