Add fixed share buttons

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,6 +47,7 @@
 
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main>
+      {{ block "share" . }}{{ partial "share-buttons.html" .}}{{ end }}
       {{ block "main" . }}{{ end }}
     </main>
     <footer>
