--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,37 @@
 @import "normalize.css/normalize.css";
 @import "dist/pre-styles.css";
 @import "syntax.css";
+
+@custom-media --large screen and (min-width: 60em);
+
+:root {
+  --card-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
+}
+
+.nested-links img {
+  &:hover,
+  &:focus {
+    cursor: pointer;
+    opacity: 0.5;
+    transition: all 0.15s ease-in;
+  }
+}
+
+.share-buttons {
+  display: none;
+  @media (--large) {
+    background-color: white;
+    border-radius: 0.4rem;
+    box-shadow: var(--card-shadow);
+    display: block;
+    margin: 1rem;
+    position: fixed;
+    text-align: center;
+    top: 20rem;
+    top: 50vh;
+  }
+}
+.share-buttons__text {
+  padding: 0.25rem;
+  font-size: 0.6rem;
+}
