--- a/layouts/partials/share-buttons.html
+++ b/layouts/partials/share-buttons.html
@@ -6,6 +6,8 @@
     <img height="32px" src='{{ "dist/img/facebook.svg" | absURL }}' />
   </div>
   <div>
-    <img height="32px" src='{{ "dist/img/twitter.svg" | absURL }}' />
+    <a href="https://twitter.com/intent/tweet?text={{ .Params.title }}&via=DeveloperDavo%20{{ .Permalink }}">
+      <img height="32px" src='{{ "dist/img/twitter.svg" | absURL }}' />
+    </a>
   </div>
 </div>
