--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,10 +8,9 @@
   --card-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
 }
 
-.nested-links img {
+.nested-links a {
   &:hover,
   &:focus {
-    cursor: pointer;
     opacity: 0.5;
     transition: all 0.15s ease-in;
   }
