--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -36,6 +36,7 @@
 {{ define "scripts" }}
   <script src="{{ "js/single.js" | absURL }}"></script>
   <script src="{{ "js/social-buttons.js" | absURL }}"></script>
+  <script src="{{ "js/share-buttons.js" | absURL }}"></script>
   <!--https://buttons.github.io/-->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 {{ end }}
