--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -21,6 +21,9 @@
     {{ partial "subscribe.html" . }}
   </div>
   <div class="article-extra">
+    {{ partial "share-buttons-horizontal.html" . }}
+  </div>
+  <div class="article-extra">
     {{ partial "extra-content.html" . }}
   </div>
   <div class="article-extra">
