--- a/layouts/partials/share-buttons.html
+++ b/layouts/partials/share-buttons.html
@@ -3,7 +3,7 @@
     SHARE
   </div>
   <div>
-    <a id="fb-share" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}">
+    <a id="fb-share" href="https://www.facebook.com/sharer/sharer.php?u=https://www.learnitmyway.com">
       <img height="32px" src='{{ "dist/img/facebook.svg" | absURL }}' />
     </a>
   </div>
