Rename to share-buttons-vertical.html

--- a/layouts/partials/share-buttons-vertical.html
+++ b/layouts/partials/share-buttons-vertical.html
@@ -1,5 +1,5 @@
-<div class="share-buttons nested-links">
-  <div class="share-buttons__text">
+<div class="share-buttons-vertical nested-links">
+  <div class="share-buttons-vertical__text">
     SHARE
   </div>
   <div>
