--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -6,7 +6,7 @@
 {{ end }}
 
 {{ define "main" }}
-{{ partial "share-buttons.html" . }}
+{{ partial "share-buttons-vertical.html" . }}
 <div class="page">
   <article class="article">
     <time class="article__date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
