--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,7 +17,7 @@
   }
 }
 
-.share-buttons {
+.share-buttons-vertical {
   display: none;
   @media (--large) {
     background-color: white;
@@ -31,7 +31,7 @@
     top: 50vh;
   }
 }
-.share-buttons__text {
+.share-buttons-vertical__text {
   padding: 0.25rem;
   font-size: 0.6rem;
 }
