--- a/layouts/partials/share-buttons-horizontal.html
+++ b/layouts/partials/share-buttons-horizontal.html
@@ -4,7 +4,7 @@
   </div>
   <div class="share-buttons-horizontal nested-links">
     <div class="share-button-horizontal">
-      <a id="fb-share" href="https://www.facebook.com/sharer/sharer.php?u=https://www.learnitmyway.com">
+      <a name="fb-share" href="https://www.facebook.com/sharer/sharer.php?u=https://www.learnitmyway.com">
         <img height="32px" src='{{ "dist/img/facebook.svg" | absURL }}' />
       </a>
     </div>
