Add single-share-horizontal and share-button--popup css classes

--- a/layouts/partials/share-buttons-horizontal.html
+++ b/layouts/partials/share-buttons-horizontal.html
@@ -1,9 +1,9 @@
-<div class="share-buttons-horizontal-container blog-extras-container">
+<div class="blog-extras-container">
   <div class="blog-extras-container__title">
     Spread the word! 
   </div>
   <div class="share-buttons-horizontal nested-links">
-    <div class="fb-share-button-horizontal share-button-horizontal">
+    <div class="share-button-horizontal share-button--popup">
       <a name="fb-share" href="https://www.facebook.com/sharer/sharer.php?u=https://www.learnitmyway.com">
         <img height="32px" src='{{ "dist/img/facebook.svg" | absURL }}' />
       </a>
