--- a/layouts/partials/share-buttons-vertical.html
+++ b/layouts/partials/share-buttons-vertical.html
@@ -2,7 +2,7 @@
   <div class="share-buttons-vertical__text">
     SHARE
   </div>
-  <div>
+  <div class="share-button--popup">
     <a name="fb-share" href="https://www.facebook.com/sharer/sharer.php?u=https://www.learnitmyway.com">
       <img height="32px" src='{{ "dist/img/facebook.svg" | absURL }}' />
     </a>
