--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -20,7 +20,7 @@
   <div class="article-extra">
     {{ partial "subscribe.html" . }}
   </div>
-  <div class="single-share-horizontal article-extra">
+  <div class="share-horizontal article-extra">
     {{ partial "share-buttons-horizontal.html" . }}
   </div>
   <div class="article-extra">
