--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,6 +4,7 @@
 
 @custom-media --large screen and (min-width: 60em);
 @custom-media --medium screen and (min-width: 30em) and (max-width: 60em);
+@custom-media --not-small screen and (min-width: 30em);
 
 :root {
   --card-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
@@ -36,9 +37,16 @@
   font-size: 0.6rem;
 }
 
-.single-share-horizontal {
+.share-horizontal {
   @media (--large) {
     display: none;
+  }
+}
+
+.index-share-horizontal {
+  margin: 0.5rem auto;
+  @media (--not-small) {
+    margin: 1rem auto
   }
 }
 
