--- a/layouts/partials/share-buttons-horizontal.html
+++ b/layouts/partials/share-buttons-horizontal.html
@@ -9,7 +9,7 @@
       </a>
     </div>
     <div class="share-button-horizontal">
-      <a href="https://twitter.com/intent/tweet?text={{ .Params.title }}&via=DeveloperDavo%20{{ .Permalink }}">
+      <a href="https://twitter.com/intent/tweet?text={{ .Title | default .Site.Title }}&via=DeveloperDavo%20{{ .Permalink }}">
         <img height="32px" src='{{ "dist/img/twitter.svg" | absURL }}' />
       </a>
     </div>
