--- a/layouts/partials/share-buttons-horizontal.html
+++ b/layouts/partials/share-buttons-horizontal.html
@@ -3,7 +3,7 @@
     Spread the word! 
   </div>
   <div class="share-buttons-horizontal nested-links">
-    <div class="share-button-horizontal share-button--popup">
+    <div class="share-button-horizontal large-screens">
       <a name="fb-share" href="https://www.facebook.com/sharer/sharer.php?u=https://www.learnitmyway.com">
         <img height="32px" src='{{ "dist/img/facebook.svg" | absURL }}' />
       </a>
