Replace hardcoded url with Permalink in share-buttons

--- a/layouts/partials/share-buttons-vertical.html
+++ b/layouts/partials/share-buttons-vertical.html
@@ -3,7 +3,7 @@
     SHARE
   </div>
   <div class="large-screens">
-    <a name="fb-share" href="https://www.facebook.com/sharer/sharer.php?u=https://www.learnitmyway.com">
+    <a name="fb-share" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}">
       <img height="32px" src='{{ "dist/img/facebook.svg" | absURL }}' />
     </a>
   </div>
