--- a/layouts/partials/share-buttons-horizontal.html
+++ b/layouts/partials/share-buttons-horizontal.html
@@ -3,8 +3,8 @@
     Spread the word! 
   </div>
   <div class="share-buttons-horizontal nested-links">
-    <div class="share-button-horizontal large-screens">
-      <a class="popup" href="https://www.facebook.com/sharer/sharer.php?u={{ .Permalink }}">
+    <div class="share-button-horizontal">
+      <a class="popup" href="https://www.facebook.com/sharer/sharer.php?u=www.google.com">
         <img height="32px" src='{{ "dist/img/facebook.svg" | absURL }}' />
       </a>
     </div>
