Add linkedin icon

--- a/layouts/partials/share-buttons-horizontal.html
+++ b/layouts/partials/share-buttons-horizontal.html
@@ -9,5 +9,8 @@
     <div class="share-button-horizontal">
       {{ partial "icon/twitter-anchor.html" . }}
     </div>
+    <div class="share-button-horizontal">
+      {{ partial "icon/linkedin-anchor.html" . }}
+    </div>
   </div>
 </div>
