--- a/layouts/partials/share-buttons-vertical.html
+++ b/layouts/partials/share-buttons-vertical.html
@@ -8,4 +8,7 @@
   <div>
     {{ partial "icon/twitter-anchor.html" . }}
   </div>
+  <div>
+    {{ partial "icon/linkedin-anchor.html" . }}
+  </div>
 </div>
