--- a/layouts/partials/share-buttons-horizontal.html
+++ b/layouts/partials/share-buttons-horizontal.html
@@ -12,5 +12,8 @@
     <div class="share-button-horizontal">
       {{ partial "icon/linkedin-anchor.html" . }}
     </div>
+    <div class="share-button-horizontal">
+      {{ partial "icon/email-anchor.html" . }}
+    </div>
   </div>
 </div>
