--- a/layouts/partials/share-buttons-vertical.html
+++ b/layouts/partials/share-buttons-vertical.html
@@ -11,4 +11,7 @@
   <div>
     {{ partial "icon/linkedin-anchor.html" . }}
   </div>
+  <div>
+    {{ partial "icon/email-anchor.html" . }}
+  </div>
 </div>
