Remove github's buttons.js

--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,7 +1,6 @@
-<div class="link-to-repo">
+<div class="link-to-repo nested-links">
   The source code for this website can be found on
-  <div id="github-repo-button" class="link-to-repo__button">
-    <a class="github-button" href="https://github.com/DeveloperDavo/learnitmyway"
-       data-size="large" aria-label="Star DeveloperDavo/learnitmyway on GitHub">GitHub</a>
+  <div class="link-to-repo__button">
+    <a href="https://github.com/DeveloperDavo/learnitmyway">GitHub</a>
   </div>
 </div>
