Replace github anchor with button

--- a/layouts/partials/link-to-repo.html
+++ b/layouts/partials/link-to-repo.html
@@ -1,6 +1,4 @@
 <div class="link-to-repo nested-links">
   The source code for this website can be found on
-  <div class="link-to-repo__button">
-    <a href="https://github.com/DeveloperDavo/learnitmyway">GitHub</a>
-  </div>
+  <button class="btn btn--github" onclick="window.open('https://github.com/DeveloperDavo/learnitmyway','_blank, noopener')">GitHub</button>
 </div>
